# channelsbot

./: .gitignore  .prospector.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
channelsbot/: __init__.py  feed.py  hooks.py  util.py
