[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "channelsbot"
description = "Create Chatmail channels out RSS/Atom feeds"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat", "bot", "feeds", "rss", "atom", "chatmail"]
authors = [
  {name = "adbenitez", email = "adb@arcanechat.me"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "deltabot-cli>=8.1.1,<9.0",
    "feedparser>=6.0.12,<7.0",
    "requests>=2.28.1,<3.0",
    "beautifulsoup4>=4.11.1,<5.0",
]

[project.urls]
Homepage = "https://github.com/deltachat-bot/channelsbot"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "prospector[with-mypy]",
  "types-requests",
]

[project.scripts]
channelsbot = "channelsbot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
version_file = "channelsbot/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
